--- a/style.css
+++ b/style.css
@@ -344,11 +344,10 @@ body{
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.2);
 }
 .typewriter h1 {
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid orange; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .15em; /* Adjust as needed */
+  overflow: hidden; 
+  border-right: .15em solid orange; 
+  white-space: nowrap;  
+  letter-spacing: .15em;
   color: #000000;
   font-size: 60px;
   background-color: #eee6e6;
